# django-nuxt-template

./: .env.example  .gitmodules  README.md  djang-nuxt-template.code-workspace  django-nuxt-template.code-workspace  manage.sh
backend/: .gitignore  pyproject.toml
backend/conf/: logconfig.json
backend/src/apps/chore/: urls.py  views.py
backend/src/apps/main/: admin.py  choices.py  enums.py  middleware.py  models.py  modelutils.py  permissions.py  serializers.py  services.py  urls.py  validators.py  views.py
backend/src/apps/main/management/commands/: collectresources.py  exportschema.py  exportsdk.py  generatesdk.py
backend/src/apps/main/migrations/: 0001_initial_user.py
backend/src/backend/: __init__.py  recieper.py  settings.py  urls.py
backend/src/backend/common/: capturelog.py  mixins.py  modelutils.py
backend/src/backend/locale/en_US/LC_MESSAGES/: django.po
backend/src/backend/locale/zh_Hans/LC_MESSAGES/: django.po
backend/src/backend/recipes/: disable_csrf.py  restapi_no_partial.py
backend/src/project/: app.py  dirs.py  env.py  logging_config.py  main.py  scripts.py  settings.py  utils.py
backend/src/project/config/: __init__.py  app.py  const.py  db.py  user.py
backend/src/project/recipes/: capture_stdout.py
backend/src/project/scripts/: _serve.py  app.py  build.py  dev.py  serve.py
client/: eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  uno.config.ts
client/app/: app.vue  spa-loading-template.html
client/app/assets/css/: overrides.css
client/app/components/layout/: LayoutMgrBase.vue
client/app/components/login/: LoginForm.vue
client/app/layouts/: login.vue  management.vue
client/app/pages/: index.vue  login.vue
client/app/pages/management/: index.vue
client/app/plugins/: error.ts
client/app/types/: index.d.ts
client/app/utils/: middlewares.ts  urls.ts
client/i18n/: i18n.config.ts  words.ts
client/i18n/locales/: en-us.ts
conf/: crontab  website.service
frontend/: .gitignore  .npmrc  cssconfig.json  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  uno.config.ts
frontend/app/: app.vue  error.vue  spa-loading-template.html
frontend/app/assets/css/: fonts.css  main.css  transition.css
frontend/app/components/common/: ActiveState.vue  ColorModeSwitch.vue  LangSwitch.vue  PasswordStrengthIndicator.vue
frontend/app/components/form/user/: CreateForm.vue  (+3 more)
frontend/app/components/forms/: ResetPasswordForm.vue
frontend/app/components/layout/: LayoutAdminTemplate.vue  LayoutAdminTemplateHeader.vue
frontend/app/components/login/: LoginForm.vue
frontend/app/components/naive/: RequestFeedbackAlova.vue  Wrapper.vue
frontend/app/components/part/: UserInfo.vue
frontend/app/components/template/: PageBase.vue
frontend/app/composables/: colorMode.ts
frontend/app/layouts/: admin.vue  login.vue
frontend/app/pages/: index.vue  login.vue
frontend/app/pages/a/: index.vue  test.vue  user.vue
frontend/app/stores/: config.ts  pinia.ts
frontend/app/types/: alova.d.ts
frontend/app/utils/: data.ts  middlewares.ts  url.ts  urls.ts
frontend/apps/admin/: nuxt.config.ts  package.json  uno.config.ts
frontend/apps/web/: .env.example  nuxt.config.ts  package.json
frontend/apps/web/app/: spa-loading-template.html
frontend/i18n/: words.ts
frontend/i18n/locales/: en-us.ts  zh-hans.ts
frontend/patches/: @nuxtjs__color-mode.patch
frontend/scripts/: generate-ssl.sh
frontend/server/api/: [...path].ts
frontend/server/assets/_locales/: en.json  zh.json
frontend/server/media/: [...path].ts
frontend/server/routes/api/: [...path].ts
frontend/src-pc/: package.json  uno.config.ts
frontend/src-pc/app/pages/: index.vue  login.vue
frontend/src-pc/app/utils/: middlewares.ts
frontend/src-pc/i18n/locales/: zh-hans.ts
server/: .env.example  .gitignore  pyproject.toml
server/conf/: logconfig.json
server/src/apps/chore/: apps.py  serializers.py  urls.py
server/src/apps/main/: admin.py  apps.py  models.py  permissions.py  signals.py  validators.py
server/src/apps/main/management/commands/: generatesdk.py
server/src/apps/main/migrations/: 0001_initial.py
server/src/server/: settings.py  urls.py
server/src/server/locale/en_US/LC_MESSAGES/: django.po
server/src/server/locale/zh_Hans/LC_MESSAGES/: django.po
(+40 files in other folders)
